# cdk-aws-kinesis-otel-lambda

./: .projenrc.ts  Cargo.toml  README.md  documentation.md  package.json  pnpm-lock.yaml
.projen/: deps.json  tasks.json
src/: main.ts
src/functions/client/: Cargo.toml
src/functions/client-rust/src/: main.rs
src/functions/client/rust/: Cargo.toml
src/functions/client/rust/src/: main.rs
src/functions/extension/: Cargo.toml
src/functions/extension/src/: main.rs
src/functions/processor/: Cargo.toml
src/functions/service/: Cargo.toml
src/layers/kinesis-export/: Cargo.toml
src/layers/kinesis-export/ref/custom-stdout-exporter/: a.json  foobar.json
src/layers/kinesis-export/ref/custom-stdout-exporter/examples/: hello_otlp.rs
src/layers/kinesis-export/ref/custom-stdout-exporter/src/: clickhouse_formatter.rs
src/layers/kinesis-export/src/: main.rs
src/stacks/: my-stack.ts
