[workspace]
members = [
    "src/functions/client-rust",
    "src/layers/kinesis-export",
    "src/packages/*"
]

resolver = "2"

[workspace.package]
version = "0.9.0"
edition = "2021"
authors = ["Foobar <foo@bar.com>"]
license = "MIT"
rust-version = "1.80"

[workspace.dependencies]
# Local packages
custom-stdout-exporter = { path = "src/packages/custom-stdout-exporter" }

# Runtime and async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.82"
futures = "0.3.31"
futures-util = "0.3.31"

# OpenTelemetry and tracing
lambda-otel-lite = "0.10.1"
opentelemetry = { version = "0.28.0", features = ["trace"] }
opentelemetry-http = { version = "0.28.0" }
opentelemetry_sdk = { version = "0.28.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28.0", features = ["http-proto", "http-json", "reqwest-client"] }
opentelemetry-proto = { version = "0.28.0", features = ["gen-tonic", "trace"] }
opentelemetry-aws = { version = "0.16.0", features = ["detector-aws-lambda"] }
tracing = { version = "0.1", features = ["log"] }
tracing-opentelemetry = "0.29.0"

# AWS related
aws-config = { version = "1.5.7", features = ["behavior-version-latest"] }
aws-smithy-runtime-api = { version = "1.7.3", features = ["http-1x"] }
aws_lambda_events = { version = "0.16.0", default-features = false, features = ["apigw", "alb", "sqs"] }
lambda_runtime = { version = "0.13.0", features = ["anyhow", "tracing", "opentelemetry"] }
aws-credential-types = "1.1.4"
aws-sdk-secretsmanager = { version = "1.48.0", features = ["behavior-version-latest"] }
aws-sdk-kinesis = { version = "1", default-features = false, features = ["rt-tokio"] }
lambda-extension = { version = "0.11.0" }

# HTTP and networking
reqwest = { version = "0.12.7", default-features = false, features = ["json", "rustls-tls"] }
http = "1.1.0"

# Serialization and utils
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.4"
anyhow = "1.0.94"
rand = "0.9.0"
chrono = "0.4.40"
uuid = { version = "1.0", features = ["v4"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"