[workspace]
members = [
    "src/functions/client-rust",
    "src/layers/kinesis-export",
    "src/packages/*"
]

resolver = "2"

[workspace.package]
version = "0.9.0"
edition = "2021"
authors = ["Foobar <foo@bar.com>"]
license = "MIT"
rust-version = "1.80"

[workspace.dependencies]
# Local packages
custom-stdout-exporter = { path = "src/packages/custom-stdout-exporter" }

# Runtime and async
async-trait = "0.1.82"
futures = "0.3.31"
futures-util = "0.3.31"
tokio = { version = "1", features = ["full"] }

# OpenTelemetry and tracing
lambda-otel-lite = "0.10.1"
opentelemetry = { version = "0.28.0", features = ["trace"] }
opentelemetry-aws = { version = "0.16.0", features = ["detector-aws-lambda"] }
opentelemetry-http = { version = "0.28.0" }
opentelemetry-otlp = { version = "0.28.0", features = ["http-proto", "http-json", "reqwest-client"] }
opentelemetry-proto = { version = "0.28.0", features = ["gen-tonic", "trace"] }
opentelemetry_sdk = { version = "0.28.0", features = ["rt-tokio"] }
tracing = { version = "0.1", features = ["log"] }
tracing-opentelemetry = "0.29.0"

# AWS related
aws-config = { version = "1.5.7", features = ["behavior-version-latest"] }
aws-credential-types = "1.1.4"
aws-sdk-kinesis = { version = "1", default-features = false, features = ["rt-tokio"] }
aws-sdk-secretsmanager = { version = "1.48.0", features = ["behavior-version-latest"] }
aws-smithy-runtime-api = { version = "1.7.3", features = ["http-1x"] }
aws_lambda_events = { version = "0.16.0", default-features = false, features = ["apigw", "alb", "sqs"] }
lambda-extension = { version = "0.11.0" }
lambda_runtime = { version = "0.13.0", features = ["anyhow", "tracing", "opentelemetry"] }

# HTTP and networking
http = "1.3.1"
reqwest = { version = "0.12.14", default-features = false, features = ["json", "rustls-tls"] }

# Serialization and utils
anyhow = "1.0.94"
chrono = "0.4.40"
rand = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.4"
uuid = { version = "1.0", features = ["v4"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"