[package]
name = "client-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# AWS Labs
aws_lambda_events = { workspace = true, features = ["apigw", "alb"] }
lambda_runtime = { workspace = true, features = ["anyhow", "tracing", "opentelemetry"] }

# Lambda Utils
lambda-otel-lite.workspace = true

# OpenTelemetry
opentelemetry.workspace = true
custom-stdout-exporter.workspace = true
tracing-opentelemetry.workspace = true

# Others
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
rand.workspace = true
