[package]
name = "otlp-stdout-kinesis-extension-layer"
version = "0.1.0"
edition = "2021"

description = "OpenTelemetry Lambda extension for sending otlp data to Kinesis"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
aws-config = { version = "1.5.7", features = ["behavior-version-latest"] }
aws-sdk-kinesis = { version = "1", default-features = false, features = ["rt-tokio"] }
lambda-extension = { version = "0.11.0" }
uuid = { version = "1.0", features = ["v4"] }