[package]
name = "otlp-stdout-kinesis-extension-layer"
version = "0.1.0"
edition = "2021"
description = "OpenTelemetry Lambda extension for sending otlp data to Kinesis"

[dependencies]
tokio.workspace = true
tracing.workspace = true
aws-config.workspace = true
aws-sdk-kinesis.workspace = true
lambda-extension.workspace = true
uuid.workspace = true
serde_json.workspace = true
jsonschema = "0.17.0"
